@@ -20,14 +20,14 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 150)
-(Parent-Version lpmud 3-3 149)
-(Version-Log "Forgot to clear the references in the list of destructed objs in a GC. Oops.
-free_prog() now dereferences its blueprint.
-Small corrections to the lp-245 mudlib.")
+(Project-Version lpmud 3-3 151)
+(Parent-Version lpmud 3-3 150)
+(Version-Log "Removed a crasher in terminal_colour().
+Added icc compiler option '-ipo' to configuration tests.
+Removed some warnings generated by icc.")
 (New-Version-Log
 "")
-(Checkin-Time "Sun, 06 Jan 2002 02:22:23 -0700")
+(Checkin-Time "Tue, 08 Jan 2002 21:05:39 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -60,20 +60,20 @@ Small corrections to the lp-245 mudlib.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.4 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.34 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.213 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.214 644))
   (HISTORY (lpmud/f/49_HISTORY 1.232 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.13 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
   ;; Configuration
-  (src/configure (lpmud/d/0_configure 1.19.1.35 755))
+  (src/configure (lpmud/d/0_configure 1.19.1.36 755))
   (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.1 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.3 644))
   (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39 644))
   (src/mkinstalldirs (lpmud/C/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/C/5_install-sh 1.2 755))
 
-  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.23 644))
+  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.24 644))
   (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.3 644))
 
   (src/settings/README (lpmud/C/22_README 1.14.1.8 644))
@@ -118,12 +118,12 @@ Small corrections to the lp-245 mudlib.")
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.4 644))
   (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.2 644))
   (src/bitstrings.h (lpmud/I/47_bitstrings 1.1 644))
-  (src/bitstrings.c (lpmud/I/48_bitstrings 1.4 644))
+  (src/bitstrings.c (lpmud/I/48_bitstrings 1.5 644))
   (src/call_out.h (lpmud/f/45_call_out.h 1.7.1.4 644))
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.17 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.5 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.32 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.3 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.4 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.16 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.8 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -131,7 +131,7 @@ Small corrections to the lp-245 mudlib.")
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.4 644))
   (src/ed.c (lpmud/c/33_ed.c 1.32.1.15 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.11 644))
-  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.5 644))
+  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.6 644))
   (src/exec.h (lpmud/c/32_exec.h 1.34.1.16 644))
   (src/files.h (lpmud/I/49_files.h 1.1 644))
   (src/files.c (lpmud/I/50_files.c 1.12 644))
@@ -143,9 +143,9 @@ Small corrections to the lp-245 mudlib.")
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.4 644))
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.6 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.22 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.3 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.4 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.9 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.1 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.8 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.2 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.9 644))
@@ -210,12 +210,12 @@ Small corrections to the lp-245 mudlib.")
   (src/func_spec (lpmud/c/31_func_spec 1.53.1.45 644))
   (src/string_spec (lpmud/F/6_string_spe 1.14.1.1 644))
   (src/mkfunc.c (lpmud/L/14_mkfunc.c 1.1 644))
-  (src/make_func.y (lpmud/b/7_make_func. 1.25.1.21 644))
+  (src/make_func.y (lpmud/b/7_make_func. 1.25.1.22 644))
 
   ;; Generic host files
   (src/hosts/README (lpmud/h/10_README 1.2 644))
   (src/hosts/crypt.c (lpmud/b/29_crypt.c 1.6 644))
-  (src/hosts/defines.txt (lpmud/b/28_defines 1.6.1.2 644))
+  (src/hosts/defines.txt (lpmud/b/28_defines 1.6.1.3 644))
   (src/hosts/unix.h (lpmud/d/37_unix.h 1.8 644))
 
   ;; Host: Amiga
