@@ -29,9 +29,11 @@ msdos:			MSDOS
 Processor Hardware:
 ------------------
 Sparc			sparc
-Intel (MWerks/Be)       __INTEL__
-Intel (gcc)             i386, __i386__
+x86 (MWerks/Be)         __INTEL__
+x86 (gcc)               i386, __i386__
+x86 (icc)               _M_IX86
 PowerPC (Darwin)        __ppc__
+Itanium (ecc)           _M_IA64
 
 compilers:
 ---------
@@ -40,3 +42,4 @@ Apple CC:               __GNUC__, __APPLE_CC__
 Cygnus gcc for Win32    __CYGWIN32__ resp. __CYGWIN__
 Metrowerks (Be)         __MWERKS__
 EMX gcc for OS/2        __EMX__
+Intel C/C++ Compiler    __INTEL_COMPILER (expands to version, e.g. 500)
