@@ -1,6 +1,15 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+08-Jan-2002 (Lars Duening)  (3..3.151)
+    - (efuns.c) Efun terminal_colour() removed a crasher which happened
+        when too many control sequences appeared in a line (reported by Peng).
+    - (autoconf/configure.in) Added icc compiler option '-ipo' to highest
+        optimisation tests.
+    - (make_func.y, bitfuns.c, comm.c, lex.c, interpret.c) Removed a couple
+        (but not all) warnings generated by the Intel Compiler (reported by
+        Dafire).
+
 03-Jan-2002 (Lars Duening)  (3.3.150)
     - (gcollect.c) Forgot to clear the refcounts in the list of
         destructed objects. Oops.
